k8s/eks/community.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentistock-community
  namespace: sentistock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentistock-community
  template:
    metadata:
      labels:
        app: sentistock-community
    spec:
      containers:
        - name: sentistock-community
          image: 260956700310.dkr.ecr.ap-northeast-2.amazonaws.com/sentistock-community:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: sentistock-community
  namespace: sentistock
spec:
  selector:
    app: sentistock-community
  ports:
    - name: http
      port: 8082
      targetPort: 8082
  type: ClusterIP
